<resources>
    <string name="app_name">UCSPyayOQ</string>
    <string name="main_activity_title">UCSPyay Old Question</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">University of Computer Studies Pyay </string>
    <string name="nav_header_subtitle">Old Questions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="first_year">First Year</string>
    <string name="second_year">Second Year</string>
    <string name="third_year">Third Year</string>
    <string name="fourth_year">Fourth Year</string>
    <string name="fifth_year">Fifth Year</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_semester">First Semester</string>
    <string name="second_semester">Second Semester</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="analysis_of_algorithms">Analysis of Algorithms</string>
    <string name="mathematics_of_computing_iv">Mathematics of Computing IV</string>
    <string name="operations_research">Operations Research</string>
    <string name="database_management_system">Database Management System</string>
    <string name="artificial_intelligence">Artificial Intelligence</string>
    <string name="english">English</string>
    <string name="stco">Structured Computer Organization</string>
    <string name="mathematics_of_computing_iii">Mathematics of computing III</string>
    <string name="dcom">Data and Communications</string>
    <string name="computer_application_techniques_iii">Computer Application TechniquesIII</string>
    <string name="advanced_programming_techniques">Advanced Programming Technique</string>
    <string name="java_programming_language">Java Programming Language</string>
    <string name="mathematics_of_computingii">Mathematics of ComputingII</string>
    <string name="_2017">2017</string>
    <string name="_2018">2018</string>
    <string name="_2019">2019</string>
    <string name="myanmar">Myanmar</string>
    <string name="physics">Physics</string>
    <string name="principle_of_it">Principle of IT</string>
    <string name="electronic_i">Electronic I</string>
    <string name="linear_control_system">Linear Control System</string>
    <string name="electrical_circuits_ii">Electrical Circuits II</string>
    <string name="introduction_to_microcontrollers">Introduction to Microcontrollers</string>
    <string name="computer_architecture_iii">Computer Architecture III</string>
    <string name="control_system_ii">Control System II</string>
    <string name="computer_networking_ii">Computer Networking II</string>
    <string name="mathematics_of_computing_v">501</string>
    <string name="distributed_computing_system_and_advanced_networking">502</string>
    <string name="information_security_and_it_risk_management">503(CS)</string>
    <string name="com_app_algs">504(CS)</string>
    <string name="data_mining">505(CS)</string>
    <string name="web_engineering">505(CS)</string>
    <string name="enterprise_resource_planning">505(CS)</string>
    <string name="principle_of_computer_science_i">CST-101</string>
    <string name="java_second">Java Programming Advance</string>
    <string name="ooad">OOAD</string>
    <string name="se_sad">SE+SAD</string>
    <string name="digital_system_design_ct">Digital System Design(CT)</string>
    <string name="digital_sys_des_i">Digital System Design I(CT)</string>
    <string name="e_circuit_i_ct">E-Circuit I(CT)</string>
    <string name="advanced_data_structured">Advanced Data Structured</string>
    <string name="operating_system">Operating System</string>
    <string name="networking_3rd">Computer Networking</string>
    <string name="c_business_application_area">C#,Business Application Area</string>
    <string name="electronics_ii">Electronics II</string>
    <string name="computer_architecture_i">Computer Architecture I</string>
    <string name="microprocessor">Microprocessor</string>
    <string name="_406">Computer Graphics</string>
    <string name="embedded_sys">Embedded Systems</string>
    <string name="com_archi_ii">Computer Architecture II</string>
    <string name="cryptography">Cryptography</string>
    <string name="com_security">Computer Security</string>
    <string name="_503_ct">503(CT)</string>
    <string name="about_us">This is my firstly mobile application named UCSPyayOQ.It includes old questions from the last three academic years.It intends for all students from UCSPyay.It may useful and save time for our students.Please contact me if you have any suggestions.</string>
</resources>