<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".ui.home.HomeFragment">

    <!--    <TextView-->
    <!--        android:id="@+id/text_home"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="20sp"-->
    <!--        android:textColor="#000"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_home_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_uni"
        style="@style/txt_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="University of Computer Studies Pyay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_home_logo" />

    <TextView
        android:id="@+id/txt_content"
        style="@style/txt_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Old Questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_uni" />

    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/txt_content"-->
    <!--        app:cardCornerRadius="10dp"-->
    <!--        app:cardBackgroundColor="#FADAC3"-->
    <!--        >-->
   <androidx.cardview.widget.CardView
       android:id="@+id/cv_home_first"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintVertical_bias="0.075"
       app:layout_constraintTop_toBottomOf="@id/txt_content"
       app:cardCornerRadius="50dp"
       android:layout_marginTop="45dp">
       <Button
           android:id="@+id/btn_home_first"
           style="@style/btn_home"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:background="@color/home_button"
           android:paddingLeft="100dp"
           android:paddingRight="100dp"
           android:text="@string/first_year"
            />

   </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_home_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_home_first"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="15dp"
        >
        <Button
            android:id="@+id/btn_home_second"
            style="@style/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/home_button"
            android:paddingLeft="85dp"
            android:paddingRight="85dp"
            android:text="@string/second_year"
            />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_home_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/cv_home_second"
        app:cardCornerRadius="50dp">
        <Button
            android:id="@+id/btn_home_third"
            style="@style/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/home_button"
            android:paddingLeft="95dp"
            android:paddingRight="95dp"
            android:text="@string/third_year"
             />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_home_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_home_third"
        app:cardCornerRadius="50dp">
        <Button
            android:id="@+id/btn_home_fourth"
            style="@style/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:background="@color/home_button"
            android:text="@string/fourth_year"
           />
    </androidx.cardview.widget.CardView>
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cv_home_fourth"
    app:cardCornerRadius="50dp">

    <Button
        android:id="@+id/btn_home_fifth"
        style="@style/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/home_button"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/fifth_year" />
</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>